# typed-extraction

./: .gitignore  coq-typed-extraction.opam  dune-project
tests/: dune
theories/: dune
