opam-version: "2.0"
name: "coq-typed-extraction"
version: "dev"
synopsis: "Typed extraction in Coq"
description: """
Extraction of types, certifying transformations (eta, inlining), type annotations, the dearg optimisation and corresponding proofs
"""
maintainer: "Danil Annenkov <danil.v.annenkov@gmail.com>"
authors: "The COBRA team"
license: "MIT"
homepage: "https://github.com/AU-COBRA/typed-extraction"
dev-repo: "git+https://github.com/AU-COBRA/typed-extraction.git"
bug-reports: "https://github.com/AU-COBRA/typed-extraction/issues"

depends: [
  "dune" {>= "2.5"}
  "coq" {>= "8.16" & < "8.17~"}
  "coq-metacoq-template" {= "1.1+8.16"}
  "coq-metacoq-pcuic" {= "1.1+8.16"}
  "coq-metacoq-safechecker" {= "1.1+8.16"}
  "coq-metacoq-erasure" {= "1.1+8.16"}
  "coq-equations" {= "1.3+8.16"}
]


build: ["dune" "build"]

install: ["dune" "install"]
